[package]
name = "sizedbytes"
version = "0.1.0"
authors = ["Frank Rehberger <frehberg@gmail.com>" ]
description = "Rust macro annotating the constant size value to a constant bytestring"
license = "Apache-2.0"
documentation = "https://github.com/frehberg/rust-sizedbytes"

[dependencies]
bytestool = "0.2.0"
